[package]
name = "btcpay-client"
version = "0.1.0"
authors = ["AE"]
edition = "2018"
license = "MIT"
keywords = ["btcpay"]
description = "A client library for BTCPay Server."
readme = "README.md"
repository = "https://github.com/AE9999/btcpay-rust"
categories = ["rest-client"]

include = [
    "**/*.rs",
    "**/*.md",
    "LICENSE",
    "README.md",
    "swagger.json",
    "Cargo.toml",
]

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]

[dev-dependencies]
